# LORE-OCR-Benchmark

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  validate_configs.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: domains.json  eval_config.json  generation_config.json  noise_weights.json
dataset/: gt_generator.py  image_noise.py  loader.py  noise_generator.py  renderer.py  sample_builder.py  serializer.py  vision_pipeline.py
evaluator/: correction_metrics.py  field_metrics.py  hallucination_detector.py  normalization_metrics.py  schema_validator.py
parsers/: json_coercion.py  normalizers.py
prompts/templates/: hospital.txt  insurance.txt  receipts.txt  task_instructions.json
report/: generator.py
results/: leaderboard.md
results/always_null/: report.html  run_config.json  summary.json
results/regex_rules/: report.html  run_config.json  summary.json
runners/: baselines.py  llm_adapter.py  multi_run.py  ocr_engine.py  prompt_formatter.py
scripts/: build_leaderboard.py  build_vision_dataset.py  snapshot_run.py
stats/: aggregator.py  bootstrap.py  visuals.py
tests/: conftest.py  test_baselines.py  test_bootstrap.py  test_image_noise.py  test_json_coercion.py  test_loader.py  test_normalization_metrics.py  test_normalizers.py  test_ocr_engine.py  test_renderer.py  test_schema_validator.py  test_validate_configs.py  test_vision_pipeline.py
